--- a/src/main/resources/theme-resources/messages/messages_de.properties
+++ b/src/main/resources/theme-resources/messages/messages_de.properties
@@ -12,3 +12,4 @@ mobileAuthErrorSent=Error sending SMS
 mobileAuthTitle=2FA SMS
 mobileActionErrorInvalidNumber=Invalid mobile number
 mobileAuthInstruction=We sent you a SMS with a code
+mobileAuthPageRefresh=Trigger sending of verification code manually
