Added mail option

--- a/src/main/resources/theme-resources/messages/messages.properties
+++ b/src/main/resources/theme-resources/messages/messages.properties
@@ -8,8 +8,15 @@ mobileActionErrorNumberMissing=Mobile number is missing
 mobileActionErrorTTL=Time to live crossed
 mobileActionSendText=Your Registration SMS code is %1$s and is valid for %2$d minutes
 mobileAuthSendText=Your SMS code is %1$s and is valid for %2$d minutes
+mobileAuthEmailSendText=Your SMS code is %1$s and is valid for %2$d minutes.
+mobileAuthEmailSubject=Verification code
 mobileAuthErrorSent=Error sending SMS
 mobileAuthTitle=2FA SMS
 mobileActionErrorInvalidNumber=Invalid mobile number
 mobileAuthInstruction=We sent you a SMS with a code
-mobileAuthPageRefresh=Trigger sending of verification code manually
+mobileAuthPageRefresh=Please trigger sending of code verification manually
+mobileAuthPageTriggeredSendCode=Triggered sending verification code
+mobileAuthSentOk=We've sent you a verification code
+mobileAuthSelectChannelFor=Selected notification channel: 
+mobileAuthSelectChannelSwitchTo=Send code via 
+mobileAuthEmailSubject=MFA Verification code
