--- a/jar-module/src/main/resources/theme-resources/messages/messages_en.properties
+++ b/jar-module/src/main/resources/theme-resources/messages/messages_en.properties
@@ -20,3 +20,7 @@ mobileAuthSentOk=We've sent you a verification code
 mobileAuthSelectChannelFor=Selected notification channel: 
 mobileAuthSelectChannelSwitchTo=Send code via 
 mobileAuthEmailSubject=MFA Verification code
+authenticatorCode=Send On-Time-Code
+mobileActionTokenTitle=Verify your mobile app
+mobileActionTokenHelpText=Scan the QR code with the app
+mobileActionTokenInstruction=Mobile App MFA
